Fixed bugs, added headings, fixed a few CSS errors on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Alegreya:300,400,700");
-.link-button {
+.link-button, .wpcf7-form input[type="submit"] {
   padding: 10px 20px;
   -webkit-border-radius: 5px;
           border-radius: 5px;
@@ -21,7 +21,7 @@
           justify-content: center;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out; }
-  .link-button:hover {
+  .link-button:hover, .wpcf7-form input[type="submit"]:hover {
     color: #f2ae00; }
 
 * {
@@ -87,6 +87,62 @@ header {
   min-height: 100vh;
   margin-top: 4em; }
 
+@media only screen and (max-width: 1000px) {
+  width: 90%; }
+
+.wpcf7-form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .wpcf7-form p {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 10px 0;
+    width: 100%; }
+  .wpcf7-form input, .wpcf7-form textarea {
+    -webkit-border-radius: 3px;
+            border-radius: 3px;
+    border-color: rgba(0, 0, 0, 0.5);
+    border-width: 1px;
+    width: 100%;
+    padding: 10px; }
+  .wpcf7-form input[type="submit"] {
+    background-color: #23396c;
+    width: auto;
+    border: 0px;
+    -webkit-align-self: center;
+        -ms-flex-item-align: center;
+                -ms-grid-row-align: center;
+            align-self: center; }
+  .wpcf7-form textarea {
+    resize: none;
+    border: 0px;
+    background-color: rgba(0, 0, 0, 0.1); }
+
+.calendar-div {
+  max-width: 320px; }
+
 .call-to-action {
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
@@ -122,8 +178,21 @@ header {
     max-width: 30em;
     word-wrap: break-word; }
 
-.calendar-div {
-  max-width: 320px; }
+/*
+Theme Name: WCCC
+Theme URI: http://www.westcentralcc.org
+Author: Tyler Reardon, Michael Arnold, Madeline Cook
+Author URI: NA
+Description: A wordpress theme for the West Central Community Center in Spokane, WA
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: black, brown, orange, tan, white, yellow, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
+Text Domain: twentythirteen
+
+This theme, like WordPress, is licensed under the GPL.
+Use it to make something cool, have fun, and share what you've learned with others.
+*/
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Alegreya:300,400,700");
@@ -208,22 +277,6 @@ header {
       border: 0px;
       background-color: rgba(0, 0, 0, 0.1); }
 
-
-/*
-Theme Name: WCCC
-Theme URI: http://www.westcentralcc.org
-Author: Tyler Reardon, Michael Arnold, Madeline Cook
-Author URI: NA
-Description: A wordpress theme for the West Central Community Center in Spokane, WA
-Version: 1.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: black, brown, orange, tan, white, yellow, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, translation-ready
-Text Domain: twentythirteen
-
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
-*/
 
 .fill-image {
   background-size: cover;
